--- a/Customer/pgOrder.xaml
+++ b/Customer/pgOrder.xaml
@@ -23,19 +23,18 @@
         <TextBlock HorizontalAlignment="Left" Margin="85,550,0,0" Text="Mail" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20"/>
         
         <TextBox x:Name="txtInstrument" HorizontalAlignment="Left" Margin="300,100,0,0" Text="" VerticalAlignment="Top" FontSize="20" Width="167" IsReadOnly="True"/>
-        <TextBox x:Name="txtQuantity" HorizontalAlignment="Left" Margin="300,150,0,0" Text="" VerticalAlignment="Top" FontSize="20" Width="167"/>
+        <TextBox x:Name="txtQuantity" HorizontalAlignment="Left" Margin="300,150,0,0" Text="" VerticalAlignment="Top" FontSize="20" Width="167" IsReadOnly="True"/>
         <TextBox x:Name="txtPriceSingleInst" HorizontalAlignment="Left" Margin="300,200,0,0" Text="" VerticalAlignment="Top" FontSize="20" Width="167" IsReadOnly="True"/>
         <TextBox x:Name="txtTotalPrice" HorizontalAlignment="Left" Margin="300,250,0,0" Text="" VerticalAlignment="Top" FontSize="20" Width="167" IsReadOnly="True"/>
        
         <TextBox x:Name="txtOrderQuantity" HorizontalAlignment="Left" Margin="300,400,0,0" Text="" VerticalAlignment="Top" FontSize="20" Width="380" InputScope="Number" PlaceholderText="" TextChanged="TxtOrderQuantity_TextChanged"/>
-        <TextBox x:Name="txtCustName" HorizontalAlignment="Left" Margin="300,450,0,0" Text="" VerticalAlignment="Top" FontSize="20" Width="380" PlaceholderText=""/>
-        <TextBox x:Name="txtCustPhone" HorizontalAlignment="Left" Margin="300,500,0,0" Text="" VerticalAlignment="Top" FontSize="20" Width="380" PlaceholderText=""/>
-        <TextBox x:Name="txtCustMail" HorizontalAlignment="Left" Margin="300,550,0,0" Text="" VerticalAlignment="Top" FontSize="20" Width="380" InputScope="EmailSmtpAddress"/>
+        <TextBox x:Name="txtCustName" HorizontalAlignment="Left" Margin="300,450,0,0" Text="" VerticalAlignment="Top" FontSize="20" Width="380" PlaceholderText="Firstname Lastname" InputScope="PersonalFullName" TextChanged="TxtCustName_TextChanged"/>
+        <TextBox x:Name="txtCustPhone" HorizontalAlignment="Left" Margin="300,500,0,0" Text="" VerticalAlignment="Top" FontSize="20" Width="380" PlaceholderText="022123456" InputScope="TelephoneNumber" TextChanged="TxtCustPhone_TextChanged"/>
+        <TextBox x:Name="txtCustMail" HorizontalAlignment="Left" Margin="300,550,0,0" Text="" VerticalAlignment="Top" FontSize="20" Width="380" InputScope="EmailSmtpAddress" PlaceholderText="example@examplemail.com" TextChanged="TxtCustMail_TextChanged"/>
         
         <Button x:Name="btnOrder" Content="Order now" HorizontalAlignment="Left" Margin="85,623,0,0" VerticalAlignment="Top" FontSize="20" Click="BtnOrder_Click"/>
-        <Button x:Name="btnCancle" Content="Cancel" HorizontalAlignment="Left" Margin="595,623,0,0" VerticalAlignment="Top" FontSize="20" Click="BtnCancle_Click"/>
-        
-        <TextBlock x:Name="txtMessage" HorizontalAlignment="Left" Margin="85,670,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20" Width="600"/>
+
+        <TextBlock x:Name="txtMessage" HorizontalAlignment="Left" Margin="220,630,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20" Width="450"/>
 
 
 
