--- a/Customer/pgInstrument.xaml
+++ b/Customer/pgInstrument.xaml
@@ -17,6 +17,7 @@
         <TextBox x:Name="txtTuning" HorizontalAlignment="Left" Margin="231,195,0,0" Text="" VerticalAlignment="Top" FontSize="20" Width="249" IsReadOnly="True"/>
         <TextBox x:Name="txtPrice" HorizontalAlignment="Left" Margin="231,263,0,0" Text="" VerticalAlignment="Top" FontSize="20" Width="249" IsReadOnly="True"/>
         <Button x:Name="btnOrder" Content="Order" HorizontalAlignment="Left" Margin="72,573,0,0" VerticalAlignment="Top" FontSize="20" Click="BtnOrder_Click"/>
+        <TextBlock x:Name="txtMessage" HorizontalAlignment="Left" Margin="200,580,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20"/>
         <ContentControl x:Name="ctcNewUsed" HorizontalAlignment="Center" Margin="0,352,0,0" VerticalAlignment="Top" Height="195" Width="570"/>
     </Grid>
 </Page>
