--- a/Customer/pgOrder.xaml
+++ b/Customer/pgOrder.xaml
@@ -28,9 +28,9 @@
         <TextBox x:Name="txtTotalPrice" HorizontalAlignment="Left" Margin="300,250,0,0" Text="" VerticalAlignment="Top" FontSize="20" Width="250" IsReadOnly="True"/>
        
         <TextBox x:Name="txtOrderQuantity" HorizontalAlignment="Left" Margin="300,400,0,0" Text="" VerticalAlignment="Top" FontSize="20" Width="380" InputScope="Number" PlaceholderText="" TextChanged="TxtOrderQuantity_TextChanged"/>
-        <TextBox x:Name="txtCustName" HorizontalAlignment="Left" Margin="300,450,0,0" Text="" VerticalAlignment="Top" FontSize="20" Width="380" PlaceholderText="Firstname Lastname" InputScope="PersonalFullName" TextChanged="TxtCustName_TextChanged"/>
-        <TextBox x:Name="txtCustPhone" HorizontalAlignment="Left" Margin="300,500,0,0" Text="" VerticalAlignment="Top" FontSize="20" Width="380" PlaceholderText="022123456" InputScope="TelephoneNumber" TextChanged="TxtCustPhone_TextChanged"/>
-        <TextBox x:Name="txtCustMail" HorizontalAlignment="Left" Margin="300,550,0,0" Text="" VerticalAlignment="Top" FontSize="20" Width="380" InputScope="EmailSmtpAddress" PlaceholderText="example@examplemail.com" TextChanged="TxtCustMail_TextChanged"/>
+        <TextBox x:Name="txtCustName" HorizontalAlignment="Left" Margin="300,450,0,0" Text="" VerticalAlignment="Top" FontSize="20" Width="380" PlaceholderText="Firstname Lastname" InputScope="PersonalFullName" TextChanged="TxtCustName_TextChanged" MaxLength="100"/>
+        <TextBox x:Name="txtCustPhone" HorizontalAlignment="Left" Margin="300,500,0,0" Text="" VerticalAlignment="Top" FontSize="20" Width="380" PlaceholderText="022123456" InputScope="TelephoneNumber" TextChanged="TxtCustPhone_TextChanged"  MaxLength="15"/>
+        <TextBox x:Name="txtCustMail" HorizontalAlignment="Left" Margin="300,550,0,0" Text="" VerticalAlignment="Top" FontSize="20" Width="380" InputScope="EmailSmtpAddress" PlaceholderText="example@examplemail.com" TextChanged="TxtCustMail_TextChanged" MaxLength="100"/>
         
         <Button x:Name="btnOrder" Content="Order now" HorizontalAlignment="Left" Margin="85,623,0,0" VerticalAlignment="Top" FontSize="20" Click="BtnOrder_Click"/>
 
